Начинаем вёрстку с препроцессором

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,16 @@
-// Начните писать стили здесь
+@import "variables.less";
+
+@import "global/fonts.less";
+@import "global/pages.less";
+@import "global/visually-hidden.less";
+
+@import "blocks/page-header.less";
+@import "blocks/page-footer.less";
+@import "blocks/main-nav.less";
+@import "blocks/download.less";
+@import "blocks/button.less";
+@import "blocks/advantages.less";
+@import "blocks/photo-list.less";
+@import "blocks/contest.less";
+
+
