Исправления для тревиса

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -29,7 +29,7 @@
   color: #ffffff;
 
 
-  border: 3px solid #FFFFFF;
+  border: 3px solid #ffffff;
   border-radius: 29px;
   background-color: transparent;
 }
