--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -15,7 +15,7 @@
 }
 
 .advantages__list {
-  background-image: url(../../img/iphone-screen-mobile@1x.png);
+  background-image: url("../../img/iphone-screen-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 157px 320px;
