--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,6 +1,6 @@
 .download__wrapper {
   background-color: #283645;
-  background-image: url(../../img/bg-back-mobile@1x.jpg);
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
 }
 
 .download__title {
