Добавила страницы некоторым блокам, подключила переменные

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -33,15 +33,15 @@
 .advantages-desc__title {
   font-weight: bold;
   font-size: 18px;
-  line-height: 24px;
+  line-height: @line-height;
   text-align: center;
-  color: #000000;
+  color: @black;
 }
 
 .advantages-desc__text {
   font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: @font-size;
+  line-height: @line-height;
   text-align: center;
-  color: #283645;
+  color: @blue-dark;
 }
