--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -26,10 +26,10 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 18px;
-  color: #ffffff;
+  color: @white;
 
 
-  border: 3px solid #ffffff;
+  border: 3px solid @white;
   border-radius: 29px;
   background-color: transparent;
 }
