--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,5 +1,5 @@
 .download__wrapper {
-  background-color: #283645;
+  background-color: @blue-dark;
   background-image: url("../../img/bg-back-mobile@1x.jpg");
 }
 
@@ -10,7 +10,7 @@
   font-weight: 300;
   font-size: 24px;
   line-height: 120%;
-  color: #ffffff;
+  color: @white;
   text-align: center;
 }
 
@@ -23,19 +23,14 @@
   list-style: none;
 }
 
-.link-list__item {
-  margin-left: 12px;
-  margin-right: 12px;
-}
-
 .download__text {
   margin-top: 31px;
   padding-bottom: 38px;
 
   font-weight: 300;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: @font-size;
+  line-height: @line-height;
   text-align: center;
 
-  color: #ffffff;
+  color: @white;
 }
