--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,14 +1,14 @@
 .main-nav {
   margin: 0 auto;
 
-  font-family: "Open Sans", "Arial", sans-serif;
+  font-family: @body-font;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 32px;
-  color: #ffffff;
+  color: @white;
 
-  background-color: #283645;
+  background-color: @blue-dark;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -19,20 +19,6 @@
 
   line-height: 32px;
 
-  border-top: 1px solid #000000;
+  border-top: 1px solid @black;
   list-style: none;
-}
-
-.site-list__item {
-  padding-top: 25px;
-  padding-bottom: 25px;
-
-  text-align: center;
-
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
-  border-bottom: 1px solid #000000;
-}
-
-.site-list__link {
-  color: #ffffff;
 }
