--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,10 +1,10 @@
 .page__header {
-  color: #ffffff;
-  background-color: #283645;
+  color: @white;
+  background-color: @blue-dark;
 }
 
 .page-header__nav-wrapper {
-  background-color: #283645;
+  background-color: @blue-dark;
 }
 
 .page-header__wrapper-logo {
@@ -14,5 +14,5 @@
   width: 74px;
   height: 23px;
 
-  background-color: #283645;
+  background-color: @blue-dark;
 }
