--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -14,10 +14,10 @@
   font-size: 24px;
   line-height: 33px;
   text-align: center;
-  color: #ffffff;
+  color: @white;
 }
 
 .contest__text,
 .contest__form {
-  background-color: #ffffff;
+  background-color: @white;
 }
