--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -16,12 +16,12 @@
   font-size: 24px;
   line-height: 33px;
   text-align: center;
-  color: #ffffff;
+  color: @white;
 }
 
 .photo-list__slogan-wrapper {
   margin-top: 10px;
-  background-color: #ffffff;
+  background-color: @white;
 }
 
 .photo-list__text {
@@ -32,55 +32,12 @@
   padding-bottom: 60px;
 
   font-weight: normal;
-  font-size: 14px;
+  font-size: @font-size;
   line-height: 30px;
   text-align: center;
-  color: #283645;
+  color: @blue-dark;
 }
 
 .photo-list__user-quote {
-  background-color: #f2f2f2;
-}
-
-.quote__title {
-  padding-top: 25px;
-  padding-left: 17px;
-
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 24px;
-
-  color: #283645;
-}
-
-.quote__title > span {
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 24px;
-
-  text-transform: uppercase;
-}
-
-.quote__text {
-  padding-top: 14px;
-  padding-left: 17px;
-
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  color: #283645;
-}
-
-.quote__likes {
-  padding-top: 25px;
-  padding-left: 17px;
-
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 24px;
-  color: #d22856;
-
-  text-transform: uppercase;
+  background-color: @grey-light;
 }
