--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,18 @@
 @import "variables.less";
+@import "global.less";
 @import "global/fonts.less";
-@import "global/pages.less";
-@import "global/visually-hidden.less";
-@import "blocks/page-header.less";
-@import "blocks/page-footer.less";
-@import "blocks/main-nav.less";
-@import "blocks/download.less";
-@import "blocks/button.less";
 @import "blocks/advantages.less";
-@import "blocks/photo-list.less";
+@import "blocks/applications.less";
+@import "blocks/button.less";
 @import "blocks/contest.less";
+@import "blocks/download.less";
+@import "blocks/link-list.less";
+@import "blocks/main-nav.less";
+@import "blocks/page-footer.less";
+@import "blocks/page-header.less";
+@import "blocks/page-main.less";
+@import "blocks/personal-data.less";
+@import "blocks/photo-list.less";
+@import "blocks/quote.less";
+@import "blocks/site-list.less";
+
