Продолжаем вёрстку с препроцессором

--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -21,3 +21,15 @@
 .contest__form {
   background-color: @white;
 }
+
+.contest__text {
+  padding-top: 54px;
+  text-align: center;
+}
+
+.contest__form {
+  text-align: center;
+  line-height: 30px;
+
+  text-transform: uppercase;
+}
