--- a/source/less/blocks/achievements.less
+++ b/source/less/blocks/achievements.less
@@ -1,6 +1,7 @@
-.applications__title {
+.achievements__title {
   margin: 0;
   padding: 0;
+  padding-top: 42px;
 
   line-height: 18px;
   text-align: center;
@@ -10,11 +11,14 @@
   text-transform: uppercase;
 }
 
-.applications__list {
+.achievements__list {
   list-style: none;
   padding-left: 0;
 
-  .applications__item {
+  .achievements__item {
     padding-bottom: 40px;
+
+    font-size: 18px;
+    line-height: 30px;
   }
 }
