--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -15,6 +15,10 @@
 }
 
 .advantages__list {
+  padding-left: 0;
+
+  text-align: center;
+
   background-image: url("../../img/iphone-screen-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: 50%;
@@ -25,7 +29,6 @@
 
 .advantages-desc__item {
   margin-bottom: 13px;
-  width: 280px;
 
   text-align: center;
 }
