--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,11 +1,15 @@
 @import "variables.less";
 @import "global.less";
 @import "global/fonts.less";
+@import "blocks/achievements.less";
 @import "blocks/advantages.less";
 @import "blocks/applications.less";
 @import "blocks/button.less";
+@import "blocks/carousel-rates.less";
+@import "blocks/contacts.less";
 @import "blocks/contest.less";
 @import "blocks/download.less";
+@import "blocks/filter.less";
 @import "blocks/link-list.less";
 @import "blocks/main-nav.less";
 @import "blocks/page-footer.less";
@@ -14,4 +18,5 @@
 @import "blocks/personal-data.less";
 @import "blocks/photo-list.less";
 @import "blocks/quote.less";
+@import "blocks/reviews.less";
 @import "blocks/site-list.less";
