--- a/source/less/blocks/carousel-rates.less
+++ b/source/less/blocks/carousel-rates.less
@@ -36,8 +36,8 @@
 
   line-height: 30px;
   text-transform: uppercase;
-  border: 1px solid #E5E5E5;
-  border-radius: 1px 0px 0px 0px;
+  border: 1px solid @grey;
+  border-radius: 1px;
 
 
   &--included::after {
