--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,35 +1,21 @@
-.main-nav__toggle--js {
-  display: none;
-}
-
 .button {
   display: block;
+  box-sizing: border-box;
+  border: none;
 
   font: inherit;
   font-size: 18px;
-  font-weight: 700;
+  font-weight: bold;
   text-align: center;
-
-  box-sizing: border-box;
-  border: 0;
-
   text-decoration: none;
   cursor: pointer;
-}
 
-.download__main-link {
-  padding-top: 21px;
-  padding-right: 39px;
-  padding-bottom: 21px;
-  padding-left: 39px;
-
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 18px;
-  color: @white;
-
-
-  border: 3px solid @white;
-  border-radius: 29px;
-  background-color: transparent;
+  &--download {
+    padding: 15px;
+    line-height: 18px;
+    border: 3px solid @white;
+    box-sizing: border-box;
+    border-radius: 29px;
+    background-color: transparent;
+  }
 }
