--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,20 @@
-.page__header {
+.page-header {
+  position: relative;
   color: @white;
   background-color: @blue-dark;
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-position: 50% 259px;
+  background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-position: 50% 256px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-position: 50% 0;
+  }
 }
 
 .page-header__nav-wrapper {
@@ -8,11 +22,92 @@
 }
 
 .page-header__wrapper-logo {
-  padding-top: 23px;
-  padding-left: 20px;
-  padding-bottom: 23px;
-  width: 74px;
-  height: 23px;
+  display: flex;
+  justify-content: space-between;
+  padding: 21px 20px 21px;
 
   background-color: @blue-dark;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 27px;
+    padding-bottom: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.page-header__logo {
+  display: block;
+  width: 74px;
+  height: 23px;
+  color: @white;
+
+  @media (min-width: @tablet-width) {
+    width: 145px;
+    height: 40px;
+  }
+}
+
+.page-header__image {
+  display: block;
+  width: 74px;
+  height: 23px;
+  fill: currentColor;
+
+  &--mobile {
+    display: block;
+  }
+
+  &--tablet {
+    display: none;
+  }
+
+  &--desktop {
+    display: none;
+  }
+}
+
+.page-header__title-wrapper {
+  padding: 15px 20px 40px;
+  min-height: 172px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header__title-wrapper {
+    margin-top: 34px;
+    margin-bottom: 34px;
+    min-height: 330px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header__title-wrapper {
+    padding-top: 29px;
+    padding-bottom: 67px;
+    min-height: 284px;
+  }
+}
+
+.page-header__title {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 33px;
+  text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header__title {
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 68px;
+  }
+}
+
+.page-header__download {
+  margin: 0 auto;
 }
