--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -2,3 +2,38 @@
   margin: 0;
   background-color: @white;
 }
+
+.page-main__wrapper-text {
+  margin: 0 auto;
+  padding: 41px 20px 32px;
+  max-width: 940px;
+
+  @media (min-width: @tablet-width) {
+    padding: 49px 20px 48px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 67px 10px 76px;
+  }
+}
+
+.page-main__text {
+  margin: 0 auto;
+  margin-bottom: 31px;
+
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 28px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+    font-size: 40px;
+    line-height: 54px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 50px;
+    line-height: 68px;
+  }
+}
