--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,13 +1,46 @@
 .site-list__item {
-  padding-top: 25px;
-  padding-bottom: 25px;
-
   text-align: center;
 
   border-top: 1px solid rgba(255, 255, 255, 0.15);
   border-bottom: 1px solid @black;
+
+  @media (min-width: @desktop-width) {
+    margin: 10px 0;
+    padding: 0;
+    border: 0;
+  }
+
+  &:not(:nth-child(4n+4)) {
+    @media (min-width: @desktop-width) {
+      margin-right: 80px;
+    }
+  }
 }
 
 .site-list__link {
+  display: block;
+  padding: 15px 20px;
+  font-size: 18px;
+  font-weight: 700;
   color: @white;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+    font-weight: 400;
+    text-transform: none;
+  }
+
+  &:not([href])::after {
+    @media (min-width: @desktop-width) {
+      content: "";
+      position: absolute;
+      bottom: -9px;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background-color: @white;
+    }
+  }
 }
