--- a/source/less/global.less
+++ b/source/less/global.less
@@ -2,10 +2,14 @@ html {
   box-sizing: border-box;
 }
 
+.page {
+  height: 100%;
+}
+
 .page__body {
-  min-width: 320px;
   margin: 0;
-  padding: 0;
+  min-width: @mobile-width;
+  min-height: 100%;
 
   color: @blue-dark;
   font-family: @body-font;
@@ -27,8 +31,21 @@ img {
 }
 
 .container {
-  max-width: 280px;
+  width: 280px;
   margin: 0 auto;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    min-width: 660px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
 }
 
 .visually-hidden:not(:focus):not(:active),
