--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,6 +14,7 @@
 @import "blocks/main-nav.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-header.less";
+@import "blocks/page-inner.less";
 @import "blocks/page-main.less";
 @import "blocks/personal-data.less";
 @import "blocks/photo-list.less";
