--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -11,3 +11,6 @@
 @body-font: "Open Sans", "Arial", sans-serif;
 @font-size: 14px;
 @line-height: 24px;
+@mobile-width: 320px;
+@tablet-width: 660px;
+@desktop-width: 960px;
