Завершаем вёрстку адаптивных сеток

--- a/source/less/blocks/achievements.less
+++ b/source/less/blocks/achievements.less
@@ -7,7 +7,7 @@
   text-align: center;
   color: @purple-red;
 
-  background-color: @grey-light;
+  background-color: @gray-light;
   text-transform: uppercase;
 }
 
