--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -3,7 +3,7 @@
 
   font-family: @body-font;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 32px;
   color: @white;
@@ -15,7 +15,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     width: 940px;
     background-color: transparent;
   }
