--- a/source/less/blocks/personal-data.less
+++ b/source/less/blocks/personal-data.less
@@ -6,7 +6,7 @@
 }
 
 .personal-data__achievements {
-  background-color: @grey-light;
+  background-color: @gray-light;
 }
 
 .personal-data__phone,
@@ -21,7 +21,7 @@
   input[type="email"] {
     padding: 23px 78px 23px 20px;
 
-    border: 2px solid @grey;
+    border: 2px solid @gray;
     border-radius: 1px;
   }
 
@@ -35,7 +35,7 @@
 }
 
 .personal-data__applications {
-  background-color: @grey-light;
+  background-color: @gray-light;
 }
 
 .personal-data__comment {
@@ -45,7 +45,7 @@
   color: @purple-red;
 
   textarea {
-    border: 2px solid @grey;
+    border: 2px solid @gray;
     border-radius: 1px;
   }
 }
@@ -64,7 +64,7 @@
   input[type="text"] {
     padding: 23px 78px 23px 20px;
 
-    border: 2px solid @grey;
+    border: 2px solid @gray;
     border-radius: 1px;
   }
 
