--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,5 @@
 .advantages {
-  background-color: @grey-light;
+  background-color: @gray-light;
 
   @media (min-width: @tablet-width) {
     background-size: 100% 50px;
@@ -17,7 +17,7 @@
 }
 
 .advantages__title {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: @line-height;
   text-align: center;
@@ -34,13 +34,14 @@
   background-image: url("../../img/iphone-screen-mobile@1x.png");
   background-position: 50% ~"calc(100% + 36px)";
   background-repeat: no-repeat;
-  background-color: @grey-light;
+  background-color: @gray-light;
 
   list-style: none;
 
   @media (min-width: @tablet-width) {
     flex-direction: column;
     align-items: flex-end;
+
     background-image: url("../../img/iphone-screen-3-tablet@1x.png");
     background-position: 20px 3px;
   }
