--- a/source/less/blocks/applications.less
+++ b/source/less/blocks/applications.less
@@ -6,7 +6,7 @@
   text-align: center;
   color: @purple-red;
 
-  background-color: @grey-light;
+  background-color: @gray-light;
   text-transform: uppercase;
 }
 
