--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -3,10 +3,10 @@
   box-sizing: border-box;
   border: none;
 
-  font: inherit;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
+
   text-decoration: none;
   cursor: pointer;
 
@@ -14,8 +14,70 @@
     padding: 15px;
     line-height: 18px;
     border: 3px solid @white;
-    box-sizing: border-box;
     border-radius: 29px;
     background-color: transparent;
+  }
+
+  &--bar {
+    padding: 16px 15px;
+    width: 100%;
+    border-radius: 2px;
+    line-height: 30px;
+    text-transform: uppercase;
+  }
+
+  &--green {
+    color: @white;
+    background-color: @green;
+  }
+
+  &--green:hover {
+    background-color: @green-dark;
+  }
+
+  &--green:active {
+    color: fade(@white, 30%);
+  }
+
+  &--circle {
+    padding: 15px;
+    line-height: 18px;
+
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 30px;
+    background-color: transparent;
+  }
+
+  &--purple {
+    border-color: @purple-red;
+    color: @purple-red;
+  }
+
+  &--purple:hover {
+    color: @white;
+    background-color: @purple-red;
+  }
+
+  &--purple:active {
+    color: fade(@white, 30%);
+    background-color: @purple-red;
+  }
+
+  &--gray {
+    border-color: fade(@blue-dark, 10%);
+    color: #dddfe0;
+  }
+
+  &--gray:hover {
+    border-color: fade(@blue-dark, 30%);
+    color: fade(@blue-dark, 30%);
+  }
+
+  &--gray:active {
+    color: fade(@white, 30%);
+
+    border-color: fade(@blue-dark, 0%);
+    background-color: fade(@blue-dark, 30%);
   }
 }
