--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -1,35 +1,594 @@
-.contest__wrapper {
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-size: 320px 300px;
+.contest__title-wrapper {
+  padding-top: 45px;
+  padding-bottom: 34px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 92px;
+    padding-bottom: 38px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 49px;
+  }
 }
 
 .contest__title {
-  margin-top: 0;
-  padding-top: 36px;
-  padding-right: 46px;
-  padding-left: 46px;
-
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 33px;
-  text-align: center;
-  color: @white;
-}
-
-.contest__text,
-.contest__form {
-  background-color: @white;
-}
-
-.contest__text {
-  padding-top: 54px;
-  text-align: center;
-}
-
-.contest__form {
-  text-align: center;
+  margin: 0 auto;
+  max-width: 500px;
   line-height: 30px;
 
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 800px;
+  }
+}
+
+.contest__form-feedback {
+  margin: 0 auto;
+}
+
+
+.contest-feedback {
+  max-width: 940px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-flow: row wrap;
+    padding: 0 10px;
+  }
+}
+
+.contest-feedback__name-wrapper {
+  padding-bottom: 42px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 34px;
+    padding-bottom: 32px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 36px;
+    padding-bottom: 30px;
+    width: 434px;
+  }
+}
+
+.contest-feedback__fieldset {
+  position: relative;
+  margin: 0;
+  padding: 0 20px;
+  border: none;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    border: 2px solid @gray;
+    border-radius: 2px;
+  }
+
+  &--name {
+    @media (min-width: @tablet-width) {
+      border: none;
+    }
+  }
+
+  &--achivments {
+    padding-top: 38px;
+    padding-bottom: 38px;
+
+    @media (min-width: @tablet-width) {
+      padding: 52px 58px 49px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 52px 8px 13px 58px;
+    }
+  }
+
+  &--contacts {
+    @media (min-width: @tablet-width) {
+      padding: 46px 58px 26px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 43px 58px 13px;
+    }
+  }
+
+  &--application {
+    padding-top: 34px;
+    padding-bottom: 34px;
+
+    @media (min-width: @tablet-width) {
+      padding: 52px 58px 55px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 54px 50px 56px 74px;
+      width: auto;
+    }
+  }
+
+  &--feeling {
+    @media (min-width: @tablet-width) {
+      padding: 46px 58px 51px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 43px 58px 43px;
+    }
+  }
+}
+
+.contest-feedback__list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+
+  &--row {
+    @media (min-width: @desktop-width) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+  }
+}
+
+.contest-feedback__name-item {
+  margin-bottom: 17px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 51px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 53px;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &--contacts {
+    @media (min-width: @tablet-width) {
+      position: relative;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-bottom: 29px;
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 2px;
+        right: 2px;
+        width: 60px;
+        height: 59px;
+        background-color: @gray;
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 0;
+      width: 375px;
+    }
+  }
+
+  &--phone::after {
+    background-image: url("../../img/icon-phone.svg");
+  }
+
+  &--email::after {
+    background-image: url("../../img/icon-mail.svg");
+  }
+}
+
+.contest-feedback__achivments-wrapper {
+  padding-top: 38px;
+  padding-bottom: 4px;
+  background-color: @gray-light;
+
+  @media (min-width: @tablet-width) {
+    order: 3;
+    padding-top: 34px;
+    padding-bottom: 30px;
+    background-color: @white;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
+}
+
+.contest-feedback__contacts-wrapper {
+  padding-top: 33px;
+  padding-bottom: 41px;
+
+  @media (min-width: @tablet-width) {
+    order: 2;
+    padding-top: 34px;
+    padding-bottom: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
+}
+
+.contest-feedback__platform-wrapper {
+  padding-top: 39px;
+  padding-bottom: 8px;
+  background-color: @gray-light;
+
+  @media (min-width: @tablet-width) {
+    order: 1;
+    padding-top: 34px;
+    padding-bottom: 30px;
+    background-color: @white;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: auto;
+    padding-top: 30px;
+    width: 435px;
+  }
+}
+
+.contest-feedback__emotions-wrapper {
+  padding-top: 39px;
+  padding-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    order: 4;
+    padding-top: 34px;
+    padding-bottom: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
+}
+
+.contest-feedback__submit-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 29px 20px 15px;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    order: 5;
+    padding: 38px 0 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 35px 0 0;
+    width: 100%;
+  }
+}
+
+.contest-feedback__legend {
+  display: block;
+  padding: 0 24px;
+  width: 100%;
+
+  line-height: 18px;
+  color: @purple-red;
+  text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    z-index: 5;
+    left: 0;
+    top: 0;
+    transform: translateY(-50%);
+    padding: 0;
+  }
+
+  &--contacts {
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: block;
+    }
+  }
+}
+
+.contest-feedback__legend-text {
+  @media (min-width: @tablet-width) {
+    display: inline-flex;
+    max-width: 90%;
+    background-color: @white;
+  }
+
+  &::before,
+  &::after {
+    @media (min-width: @tablet-width) {
+      content: "";
+    }
+  }
+
+  &::before {
+    margin-right: 30px;
+  }
+
+  &::after {
+    margin-left: 30px;
+  }
+}
+
+.contest-feedback__achivments-item {
+  margin-bottom: 43px;
+
+  @media (min-width: @desktop-width) {
+    width: 260px;
+
+    &:nth-child(2),
+    &:nth-child(4),
+    &:nth-child(6) {
+      order: 2;
+    }
+
+    &:nth-child(3),
+    &:nth-child(5) {
+      order: 1;
+    }
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.contest-feedback__platform-item {
+  margin-bottom: 36px;
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 35px;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.contest-feedback__button {
+  @media (min-width: @tablet-width) {
+    width: 300px;
+  }
+}
+
+.contest-feedback__notification {
+  margin-top: 36px;
+  margin-bottom: 0;
+  line-height: 30px;
+  text-align: center;
+  text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+    width: 300px;
+    text-align: right;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 320px;
+  }
+}
+
+.contest-feedback__notification-aux {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: inline;
+  }
+}
+
+.contest-feedback__asterix {
+  color: @purple-red;
+}
+
+.contest-feedback__label {
+  display: block;
+  margin-left: 22px;
+  margin-bottom: 5px;
+  line-height: 30px;
+  color: @purple-red;
+  text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 18px;
+  }
+
+  &--contacts {
+    @media (min-width: @tablet-width) {
+      order: 1;
+      margin-top: 10px;
+      margin-left: 19px;
+    }
+  }
+}
+
+.contest-feedback__input {
+  display: block;
+  padding: 14px 20px 15px;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 63px;
+  border: 2px solid @gray;
+  border-radius: 2px;
+  font: inherit;
+  font-size: 18px;
+  line-height: 30px;
+
+  &:hover {
+    border-color: @blue-dark;
+  }
+
+  &:focus {
+    outline: 0;
+    border-color: @purple-red;
+  }
+
+  &--contacts {
+    @media (min-width: @tablet-width) {
+      padding-right: 80px;
+    }
+  }
+}
+
+.contest-feedback__label-checkbox {
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 35px;
+    height: 35px;
+    border: 2px solid @gray;
+    border-radius: 2px;
+    background-color: @white;
+  }
+
+  &::after {
+    content: none;
+    position: absolute;
+    left: 8px;
+    top: 11px;
+    transform: rotate(-45deg);
+    width: 21px;
+    height: 10px;
+    border-left: 2px solid @purple-red;
+    border-bottom: 2px solid @purple-red;
+  }
+}
+
+.contest-feedback__label-radio {
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 35px;
+    height: 35px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: @gray;
+    border-radius: 50%;
+    background-color: @white;
+  }
+
+  &::after {
+    content: none;
+    position: absolute;
+    left: 13px;
+    top: 50%;
+    width: 14px;
+    height: 14px;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    background-color: @purple-red;
+  }
+}
+
+.contest-feedback__label-checkbox,
+.contest-feedback__label-radio {
+  position: relative;
+  display: block;
+  padding-left: 69px;
+  padding-top: 5px;
+  padding-bottom: 4px;
+  font-size: 18px;
+  line-height: 30px;
+  cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 59px;
+  }
+
+  &:hover::before {
+    border-color: @blue-dark;
+  }
+
+  &:active::before {
+    border-color: @purple-red;
+  }
+}
+
+.contest-feedback__checkbox {
+  &:focus + .contest-feedback__label-checkbox {
+    outline: 1px dashed @purple-red;
+    outline-offset: 2px;
+  }
+
+  &:checked + .contest-feedback__label-checkbox {
+    &::after {
+      content: "";
+    }
+  }
+
+  &:disabled + .contest-feedback__label-checkbox {
+    &::before,
+    &::after {
+      border-color: fade(@gray, 50%);
+    }
+  }
+}
+
+.contest-feedback__radio {
+  &:focus + .contest-feedback__label-radio {
+    outline: 1px dashed @purple-red;
+    outline-offset: 2px;
+  }
+
+  &:checked + .contest-feedback__label-radio {
+    &::after {
+      content: "";
+    }
+  }
+
+  &:disabled + .contest-feedback__label-radio {
+    &::before {
+      border-color: fade(@gray, 50%);
+    }
+
+    &::after {
+      background-color: fade(@gray, 50%);
+    }
+  }
+}
+
+.contest-feedback__textarea {
+  margin-top: 16px;
+  padding: 14px 19px;
+  min-height: 200px;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  resize: vertical;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+    min-height: 193px;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: 128px;
+  }
 }
