--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,6 +1,7 @@
 .download {
-  padding-top: 10px;
+  padding: 10px 20px 30px;
   width: 280px;
+
   background-image: url("../../img/iphone-hand-mobile@1x.png");
   background-position: 0 110px;
   background-repeat: no-repeat;
@@ -9,6 +10,7 @@
     padding-top: 93px;
     padding-bottom: 110px;
     width: 640px;
+
     background-image: url("../../img/iphone-hand-tablet@1x.png");
     background-position: -20px 74px;
   }
@@ -50,7 +52,6 @@
 
 .download__main-button {
   margin-top: 348px;
-
   color: @white;
 
   @media (min-width: @tablet-width) {
