--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -1,54 +1,279 @@
 .filter {
+  @media (min-width: @desktop-width) {
+    padding-bottom: 28px;
+  }
+}
+
+.filter__head {
+  padding-top: 43px;
+  padding-bottom: 42px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 64px;
+    padding-bottom: 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 59px;
+    padding-bottom: 66px;
+  }
+}
+
+.filter__text {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 30px;
   text-align: center;
-  margin-top: 49px;
 
-  .filter__text {
-    line-height: 30px;
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
   }
 }
 
-.filter__form {
-  background-color: @grey-light;
+.filter__wrapper {
+  background-color: @gray-light;
 
-  .filter__list {
-    list-style: none;
-    padding-left: 0;
-  }
-
-  .filter__button {
-    border: 0;
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
   }
 }
 
-.filter__button-icon {
-  fill: rgba(40, 54, 69, 0.3);
+.filter-photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  &--current {
+  padding-top: 20px;
+  padding-bottom: 29px;
+  background-color: @gray-light;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    align-items: flex-start;
+    padding-top: 40px;
+    padding-bottom: 29px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 41px 60px 57px 80px;
+  }
+}
+
+.filter-photo__image {
+  display: block;
+  width: 280px;
+  height: 374px;
+
+  background-image: url("../../img/photo-road-mobile@1x.jpg");
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 16px;
+    width: 300px;
+    height: 400px;
+    background-image: url("../../img/photo-road-tablet@1x.jpg");
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 0;
+    background-image: url("../../img/photo-road-desktop@1x.jpg");
+  }
+}
+
+.filter-photo__controls {
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+    margin-left: auto;
+    width: 275px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 0;
+    width: 410px;
+  }
+}
+
+.filter-photo__filters {
+  padding: 42px 20px 38px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 66px;
+    padding: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 145px;
+  }
+}
+
+.filter-photo__filters-buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 240px;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.filter-photo__icon {
+  display: block;
+  fill: fade(@blue-dark, 30%);
+
+  &--crop {
+    @media (min-width: @tablet-width) {
+      width: 22px;
+      height: 22px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 44px;
+      height: 44px;
+    }
+  }
+
+  &--fill {
+    @media (min-width: @tablet-width) {
+      width: 24px;
+      height: 24px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 48px;
+      height: 48px;
+    }
+  }
+
+  &--contrast {
+    @media (min-width: @tablet-width) {
+      width: 16px;
+      height: 16px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 32px;
+      height: 32px;
+    }
+  }
+}
+
+.filter-photo__icon-wrapper {
+  display: none;
+  justify-content: center;
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    width: 27px;
+    height: 27px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 48px;
+    height: 48px;
+  }
+
+  .filter-photo__icon {
     fill: @purple-red;
   }
 }
 
-.filter__button-form {
-  padding: 21px 90px 21px 90px;
-  box-sizing: border-box;
+.filter-photo__filter-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 18px;
-  text-align: center;
+  padding: 0;
+  width: 48px;
+  height: 48px;
 
-  border-radius: 30px;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
 
-  &--posting {
-    color: @purple-red;
-
-    border: 3px solid @purple-red;
+  &--current .filter-photo__icon {
+    fill: @purple-red;
   }
 
-  &--reset {
-    color: @blue-dark;
+  &:focus {
+    outline: 1px dashed @purple-red;
+  }
 
-    border: 3px solid @blue-dark;
-    opacity: 0.1;
+  &:not(&--current):hover {
+    .filter-photo__icon {
+      fill: fade(@blue-dark, 50%);
+    }
+  }
+}
+
+.filter-photo__filter {
+  position: relative;
+  display: none;
+  align-items: center;
+  height: 72px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: -40px;
+    bottom: 0;
+
+    height: 1px;
+    background-color: #dddfe0;
+
+    @media (min-width: @tablet-width) {
+      left: 0;
+      width: 100%;
+    }
+  }
+
+  &--current {
+    display: flex;
+  }
+}
+
+.filter-photo__buttons {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.filter-photo__button {
+  margin-bottom: 13px;
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 26px;
+    width: 260px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+    width: 45%;
+  }
+}
+
+.filter-photo__filter-range {
+  margin-left: auto;
+  width: 100%;
+  height: 14px;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 18px;
+    width: 202px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 30px;
+    width: 288px;
   }
 }
