--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,17 +1,125 @@
-.page-footer--index {
-  display: none;
-}
-
 .page-footer {
   padding-top: 40px;
-  padding-bottom: 51px;
+  padding-bottom: 41px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 38px;
+    padding-bottom: 38px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 72px;
+    padding-bottom: 74px;
+  }
+}
+
+.page-footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+}
+
+.page-footer__copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 155px;
+
+  @media (min-width: @tablet-width) {
+    justify-content: flex-end;
+  }
+}
+
+.page-footer__copyright-text {
+  margin-right: 16px;
+  line-height: 18px;
+
+  @media (min-width: @desktop-width) {
+    margin-right: 13px;
+    font-size: 18px;
+  }
+}
+
+.page-footer__copyright-link {
+  display: block;
+  fill: @purple-red;
+  width: 27px;
+  height: 34px;
+
+  &:hover {
+    fill: @gray-dark;
+  }
+
+  &:active {
+    fill: fade(@gray-dark, 30%);
+  }
 }
 
 .page-footer__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   margin: 0;
   padding-left: 0;
   padding-top: 39px;
   padding-bottom: 39px;
 
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 600px;
+  }
+}
+
+.page-footer__item {
+  margin: 0 14px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 3px 0 9px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 2px 0 10px;
+  }
+}
+
+.page-footer__link {
+  display: flex;
+  width: 45px;
+  height: 45px;
+
+  fill: @purple-red;
+  border-width: 3px;
+  border-style: solid;
+  border-color: fade(@blue-dark, 10%);
+  border-radius: 50%;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &:hover {
+    border-color: @blue-dark;
+  }
+
+  &:active {
+    border-color: fade(@blue-dark, 40%);
+    opacity: 0.3;
+  }
+}
+
+.page-footer__icon {
+  display: block;
+  margin: auto;
+  fill: @purple-red;
 }
