--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,7 @@
 .page-header {
   position: relative;
   color: @white;
+
   background-color: @blue-dark;
   background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-position: 50% 259px;
@@ -19,12 +20,16 @@
 
 .page-header__nav-wrapper {
   background-color: @blue-dark;
+
+  @media (min-width: @desktop-width) {
+    background-color: fade(@black, 30%);
+  }
 }
 
 .page-header__wrapper-logo {
   display: flex;
   justify-content: space-between;
-  padding: 21px 20px 21px;
+  padding: 21px 20px;
 
   background-color: @blue-dark;
 
@@ -36,6 +41,7 @@
   @media (min-width: @desktop-width) {
     padding-left: 0;
     padding-right: 0;
+    background-color: transparent;
   }
 }
 
@@ -56,6 +62,7 @@
   width: 74px;
   height: 23px;
   fill: currentColor;
+  pointer-events: none;
 
   &--mobile {
     display: block;
@@ -94,6 +101,7 @@
 .page-header__title {
   margin-top: 16px;
   margin-bottom: 16px;
+
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
