--- a/source/less/blocks/page-inner.less
+++ b/source/less/blocks/page-inner.less
@@ -26,3 +26,36 @@
     max-width: 800px;
   }
 }
+
+.contest__title-wrapper {
+  padding-top: 45px;
+  padding-bottom: 34px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 92px;
+    padding-bottom: 38px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 49px;
+  }
+}
+
+.contest__title {
+  margin: 0 auto;
+  max-width: 500px;
+  line-height: 30px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 800px;
+  }
+}
+
+.page-inner__form-feedback {
+  margin: 0 auto;
+}
