--- a/source/less/blocks/quote.less
+++ b/source/less/blocks/quote.less
@@ -3,7 +3,7 @@
   padding-left: 17px;
 
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: @font-size;
   line-height: @line-height;
   color: @blue-dark;
