--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,16 +1,134 @@
 .reviews {
-  margin-top: 50px;
-
+  position: relative;
+  padding-top: 29px;
+  padding-bottom: 29px;
   text-align: center;
 
-  .reviews__author-name {
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 30px;
-    color: @black;
+  @media (min-width: @tablet-width) {
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 
-  .reviews__text {
-    line-height: 30px;
+  @media (min-width: @desktop-width) {
+    padding-top: 185px;
+    padding-bottom: 40px;
+
+    background-image: url("../../img/icon-quotes.svg");
+    background-repeat: no-repeat;
+    background-position: 50% 73px;
+    background-size: 79px 63px;
+  }
+}
+
+.reviews__slide {
+  display: none;
+  flex-direction: column;
+  height: 238px;
+  line-height: 30px;
+
+  @media (min-width: @tablet-width) {
+    height: 187px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+    padding-top: 0;
+    padding-bottom: 0;
+    width: 780px;
+  }
+
+  &--current {
+    display: flex;
+  }
+}
+
+.reviews__author {
+  order: -1;
+  margin-top: 13px;
+  margin-bottom: 13px;
+  font-size: 18px;
+  font-weight: 700;
+  color: @black;
+
+  @media (min-width: @tablet-width) {
+    order: 0;
+    margin-top: 20px;
+    margin-bottom: 0;
+    font-size: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 21px;
+    font-size: 24px;
+    font-weight: 700;
+  }
+}
+
+.reviews__author-description {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+    margin-top: 2px;
+    margin-bottom: 2px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+  }
+}
+
+.reviews__quote {
+  margin: 0;
+  max-height: 180px;
+  overflow: hidden;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 13px;
+    max-height: 90px;
+    font-size: 18px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+    z-index: 2;
+  }
+}
+
+.reviews__quote-text {
+  margin: 0;
+
+  &::before {
+    content: "\00ab";
+  }
+
+  &::after {
+    content: "\00bb";
+  }
+}
+
+.reviews__slider-controls {
+  margin-top: 33px;
+  margin-bottom: 13px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.reviews__slider-nav {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    top: 50%;
+    left: 10px;
+    right: 10px;
   }
 }
