--- a/source/less/global.less
+++ b/source/less/global.less
@@ -31,20 +31,14 @@ img {
 }
 
 .container {
-  width: 280px;
   margin: 0 auto;
-  padding: 0 20px;
-
-  @media (min-width: @tablet-width) {
-    min-width: 660px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
+  min-width: @mobile-width;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @media (min-width: @desktop-width) {
-    min-width: 960px;
-    margin: 0 auto;
-    padding: 0 20px;
+    padding-left: 130px;
+    padding-right: 130px;
   }
 }
 
@@ -62,4 +56,12 @@ input[type="file"].visually-hidden {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   white-space: nowrap;
+}
+
+.mobile-hidden {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: inline;
+  }
 }
