--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "global/fonts.less";
 @import "blocks/achievements.less";
 @import "blocks/advantages.less";
+@import "blocks/application-efficiency.less";
 @import "blocks/applications.less";
 @import "blocks/button.less";
 @import "blocks/carousel-rates.less";
@@ -12,6 +13,7 @@
 @import "blocks/filter.less";
 @import "blocks/link-list.less";
 @import "blocks/main-nav.less";
+@import "blocks/modal-form.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-header.less";
 @import "blocks/page-inner.less";
@@ -20,4 +22,7 @@
 @import "blocks/photo-list.less";
 @import "blocks/quote.less";
 @import "blocks/reviews.less";
+@import "blocks/reviews-nav.less";
 @import "blocks/site-list.less";
+@import "blocks/slider.less";
+@import "blocks/toggles.less";
