--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,7 +1,8 @@
 /*colors*/
 @white: #ffffff;
-@grey-light: #f2f2f2;
-@grey: #e5e5e5;
+@gray-light: #f2f2f2;
+@gray-dark: #dedede;
+@gray: #e5e5e5;
 @black: #000000;
 @blue-dark: #283645;
 @purple-red: #d22856;
