Продолжаем вёрстку личного проекта

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -15,8 +15,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
     width: 940px;
     background-color: transparent;
   }
@@ -38,6 +36,10 @@
     width: 622px;
     border-top: 0;
     line-height: 18px;
+  }
+
+  &--closed {
+    display: none;
   }
 }
 
