--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -3,12 +3,12 @@
   padding-bottom: 41px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 38px;
+    padding-top: 34px;
     padding-bottom: 38px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 72px;
+    padding-top: 69px;
     padding-bottom: 74px;
   }
 }
@@ -37,7 +37,7 @@
 }
 
 .page-footer__copyright-text {
-  margin-right: 16px;
+  margin-right: 14px;
   line-height: 18px;
 
   @media (min-width: @desktop-width) {
@@ -53,11 +53,11 @@
   height: 34px;
 
   &:hover {
-    fill: @gray-dark;
+    fill: @blue-dark;
   }
 
   &:active {
-    fill: fade(@gray-dark, 30%);
+    fill: fade(@blue-dark, 30%);
   }
 }
 
@@ -67,8 +67,8 @@
   flex-wrap: wrap;
   margin: 0;
   padding-left: 0;
-  padding-top: 39px;
-  padding-bottom: 39px;
+  padding-top: 34px;
+  padding-bottom: 36px;
 
   list-style: none;
 
@@ -83,21 +83,21 @@
 }
 
 .page-footer__item {
-  margin: 0 14px;
+  margin: 0 3px;
 
   @media (min-width: @tablet-width) {
-    margin: 0 3px 0 9px;
+    margin: 0 1px 0 9px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 2px 0 10px;
+    margin: 0 3px 0;
   }
 }
 
 .page-footer__link {
   display: flex;
-  width: 45px;
-  height: 45px;
+  width: 55px;
+  height: 55px;
 
   fill: @purple-red;
   border-width: 3px;
@@ -114,7 +114,7 @@
 
   &:active {
     border-color: fade(@blue-dark, 40%);
-    opacity: 0.3;
+    opacity: 0.1;
   }
 }
 
