--- a/source/less/blocks/toggles.less
+++ b/source/less/blocks/toggles.less
@@ -1,10 +1,13 @@
-.toggles {
+.toggles,
+.toggles-table {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 6px;
 }
 
-.toggles__button {
+.toggles__button,
+.toggles-table__button {
   box-sizing: content-box;
   margin-left: 9px;
   margin-right: 9px;
