--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,6 +13,7 @@
 @import "blocks/filter.less";
 @import "blocks/link-list.less";
 @import "blocks/main-nav.less";
+@import "blocks/map.less";
 @import "blocks/modal-form.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-header.less";
@@ -20,9 +21,8 @@
 @import "blocks/page-main.less";
 @import "blocks/personal-data.less";
 @import "blocks/photo-list.less";
-@import "blocks/quote.less";
+@import "blocks/price.less";
 @import "blocks/reviews.less";
 @import "blocks/reviews-nav.less";
 @import "blocks/site-list.less";
-@import "blocks/slider.less";
 @import "blocks/toggles.less";
