--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -10,18 +10,18 @@
   }
 }
 
-.advantages__item {
-  margin-bottom: 13px;
-
-  text-align: center;
-}
-
 .advantages__title {
-  font-weight: 700;
+  margin-top: 2px;
+  margin-bottom: 10px;
+
   font-size: 18px;
-  line-height: @line-height;
-  text-align: center;
+  font-weight: 700;
   color: @black;
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 24px;
+    font-size: 30px;
+  }
 }
 
 .advantages__list {
@@ -29,10 +29,10 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
-  padding: 64px 20px 305px;
+  padding: 53px 20px 290px;
 
   background-image: url("../../img/iphone-screen-mobile@1x.png");
-  background-position: 50% ~"calc(100% + 36px)";
+  background-position: 50% ~"calc(100% + 44px)";
   background-repeat: no-repeat;
   background-color: @gray-light;
 
@@ -41,6 +41,8 @@
   @media (min-width: @tablet-width) {
     flex-direction: column;
     align-items: flex-end;
+    padding: 55px 20px 27px;
+    width: 620px;
 
     background-image: url("../../img/iphone-screen-3-tablet@1x.png");
     background-position: 20px 3px;
@@ -56,10 +58,44 @@
   }
 }
 
+.advantages__item {
+  margin-bottom: 13px;
+  width: 280px;
+  text-align: center;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+    padding-left: 18px;
+    width: 312px;
+    text-align: left;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 339px;
+    width: 240px;
+    line-height: 30px;
+    text-align: center;
+    background-size: 292px 302px;
+  }
+}
+
 .advantages__text {
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-weight: normal;
   font-size: @font-size;
   line-height: @line-height;
-  text-align: center;
   color: @blue-dark;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 12px;
+    margin-bottom: 16px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+  }
 }
