--- a/source/less/blocks/carousel-rates.less
+++ b/source/less/blocks/carousel-rates.less
@@ -1,117 +1,106 @@
 .carousel-rates {
-  position: relative;
-  padding-top: 65px;
-  padding-bottom: 50px;
-  text-align: center;
-  background: @gray-light;
-
-  @media (min-width: @tablet-width) {
-    font-size: 0;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-
-  @media (min-width: @desktop-width) {
-    padding-top: 55px;
-    padding-bottom: 50px;
-  }
-}
-
-.carousel-rates__table {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  width: 834px;
+  border-spacing: 0;
 
   @media (min-width: @tablet-width) {
     width: 100%;
   }
-
-  @media (min-width: @desktop-width) {
-    font-size: 0;
-  }
 }
 
-.carousel-rates__item {
-  vertical-align: middle;
-  margin: 0 -5px 40px 0;
-
-  text-align: center;
-  line-height: 30px;
-
-  border: 2px solid @gray;
-  border-radius: 1px;
+.carousel-rates__head {
   position: relative;
+  padding-top: 15px;
+  padding-bottom: 29px;
+  border-right: 2px solid @gray;
+  font-size: 16px;
+  line-height: 24px;
+  color: @white;
+  background-color: @blue-dark;
 
   @media (min-width: @tablet-width) {
-    display: inline-block;
-    vertical-align: middle;
-    width: 25%;
-    margin-right: -2px;
-    font-size: 0;
+    padding-top: 10px;
+    padding-bottom: 8px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 16px;
+    padding-bottom: 22px;
+  }
+
+  &:first-child {
+    display: none;
+    border-right: 0;
+    border-bottom: 2px solid @gray;
+    background-color: transparent;
+
+    @media (min-width: @tablet-width) {
+      display: table-cell;
+    }
+  }
+
+  &:last-child {
+    border-right-color: @blue-dark;
   }
 
   &--hit-sticker {
-    &::before {
-      content: "Хит";
-      position: absolute;
-      top: 11px;
-      left: -28px;
-      transform: rotate(-45deg);
-      width: 100px;
-      height: 30px;
+    background-image: url("../../img/bg-hit.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
 
-      font-size: @font-size;
-      line-height: 30px;
-      color: @white;
-      text-align: center;
-      text-transform: uppercase;
-      background-color: @purple-red;
+    @media (min-width: @tablet-width) {
+      background-image: url("../../img/bg-hit-tablet.svg");
+    }
 
-      @media (min-width: @tablet-width) {
-        top: 5px;
-      }
+    @media (min-width: @desktop-width) {
+      background-image: url("../../img/bg-hit.svg");
+    }
+  }
 
-      @media (min-width: @desktop-width) {
-        top: 10px;
-        width: 110px;
-      }
+  &--hit-sticker::before {
+    content: "Хит";
+    position: absolute;
+    top: 14px;
+    left: -24px;
+    transform: rotate(-45deg);
+    width: 100px;
+    height: 30px;
+    font-size: 14px;
+    font-weight: 400;
+    color: @white;
+
+    @media (min-width: @tablet-width) {
+      top: 10px;
+      left: -26px;
+    }
+
+    @media (min-width: @desktop-width) {
+      top: 12px;
+      left: -19px;
     }
   }
 }
 
-.carousel-rates__head {
-  padding: 20px;
-  color: @white;
-
-  background-color: @blue-dark;
-  text-transform: uppercase;
-
-  @media (min-width: @tablet-width) {
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
+.carousel-rates__type,
+.carousel-rates__price {
+  display: block;
 }
 
-.carousel-rates__subtitle {
-  font-size: 18px;
-  line-height: 25px;
-  font-weight: 700;
+.carousel-rates__type {
+  font-weight: bold;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
-    line-height: 30px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 18px;
-    line-height: 30px;
   }
 }
 
 .carousel-rates__price {
+  font-weight: 300;
   font-size: 18px;
   line-height: 30px;
-  font-weight: 300;
 
   @media (min-width: @tablet-width) {
     font-size: 18px;
@@ -122,82 +111,82 @@
   }
 }
 
-.carousel-rates__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.carousel-rates__text {
-  position: relative;
-  box-sizing: content-box;
-  padding: 0 15px;
-  min-height: 60px;
-
-  text-align: left;
-  font-size: @font-size;
-  line-height: 60px;
-  color: @blue-dark;
-
-  text-transform: uppercase;
-  border-top: 2px solid @gray;
-  background-image: url("../../img/icon-yes.svg");
+.carousel-rates__square {
+  padding: 15px 18px 14px 22px;
+  border-right: 2px solid @gray;
+  border-bottom: 2px solid @gray;
   background-color: @white;
-  background-repeat: no-repeat;
-  background-position: 93% 50%;
-  background-size: 31px 21px;
 
   @media (min-width: @tablet-width) {
-    padding-left: 20px;
-    min-height: 45px;
-
-    font-size: 0;
-    line-height: 45px;
-    background-position-x: 50%;
+    padding: 7px 20px 8px;
+    width: 25%;
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 20px;
-    min-height: 60px;
-    line-height: 60px;
-    font-size: 0;
+    padding: 14px 20px 15px;
   }
 
   &:first-child {
-    border-top: none;
+    display: none;
+    border-left: 2px solid @gray;
+
+    @media (min-width: @tablet-width) {
+      display: table-cell;
+      padding-left: 14px;
+      padding-right: 14px;
+      text-transform: none;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-left: 21px;
+      padding-right: 21px;
+      font-size: 18px;
+    }
+  }
+}
+
+.carousel-rates__attribute {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    justify-content: center;
+  }
+
+  &::before {
+    content: attr(data-hint);
+
+    @media (min-width: @tablet-width) {
+      content: "";
+    }
+  }
+}
+
+.carousel-rates__attribute-value {
+  display: block;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  &--included {
+    width: 31px;
+    height: 23px;
+    background-image: url("../../img/icon-yes.svg");
   }
 
   &--not-included {
+    width: 27px;
+    height: 27px;
     background-image: url("../../img/icon-no.svg");
-    background-size: 27px 27px;
-  }
-}
-
-.carousel-rates__position {
-  min-width: 160px;
-  display: none;
-
-  @media (min-width: @tablet-width) {
-    display: inline-block;
-    vertical-align: bottom;
-    line-height: 30px;
-  }
-}
-
-.carousel-rates__position-item {
-  font-size: @font-size;
-  text-transform: none;
-  background-image: none;
-
-  @media (min-width: @desktop-width) {
-    font-size: 18px;
   }
 }
 
 .carousel-rates__slider-controls {
-  .toggles__button {
-    @media (min-width: @tablet-width) {
-      display: none;
-    }
+  margin-top: 44px;
+  margin-bottom: 15px;
+
+  @media (min-width: @desktop-width) {
+    display: none;
   }
 }
