--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,6 +1,5 @@
 .contacts {
   padding-top: 19px;
-  padding-bottom: 38px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
@@ -15,7 +14,7 @@
 
 .contacts__title {
   margin-top: 24px;
-  margin-bottom: 35px;
+  margin-bottom: 20px;
   font-size: 24px;
   font-weight: 300;
   line-height: 120%;
@@ -39,6 +38,7 @@
   justify-content: center;
   margin: 0;
   padding-left: 0;
+  padding-bottom: 40px;
   list-style: none;
 
   @media (min-width: @tablet-width) {
@@ -55,7 +55,7 @@
 }
 
 .contacts__item {
-  margin-bottom: 24px;
+  margin-bottom: 0;
   width: 280px;
 
   @media (min-width: @tablet-width) {
@@ -90,6 +90,8 @@
 }
 
 .contacts__subtitle {
+  margin-top: 19px;
+  margin-bottom: 0;
   font-size: 18px;
   font-weight: 700;
   line-height: 25px;
@@ -132,4 +134,13 @@
 .contacts__iframe {
   width: 100%;
   border: none;
+  height: 200px;
+
+  @media (min-width: @tablet-width) {
+    height: 374px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 502px;
+  }
 }
