--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -1,5 +1,5 @@
 .contest__title-wrapper {
-  padding-top: 45px;
+  padding-top: 43px;
   padding-bottom: 34px;
   text-align: center;
 
@@ -43,7 +43,7 @@
 
   @media (min-width: @desktop-width) {
     flex-flow: row wrap;
-    padding: 0 10px;
+    padding: 0;
   }
 }
 
@@ -89,17 +89,17 @@
     }
 
     @media (min-width: @desktop-width) {
-      padding: 52px 8px 13px 58px;
+      padding: 50px 8px 13px 58px;
     }
   }
 
   &--contacts {
     @media (min-width: @tablet-width) {
-      padding: 46px 58px 26px;
+      padding: 44px 58px 26px;
     }
 
     @media (min-width: @desktop-width) {
-      padding: 43px 58px 13px;
+      padding: 42px 58px 13px;
     }
   }
 
@@ -112,7 +112,7 @@
     }
 
     @media (min-width: @desktop-width) {
-      padding: 54px 50px 56px 74px;
+      padding: 53px 50px 56px 74px;
       width: auto;
     }
   }
@@ -123,7 +123,7 @@
     }
 
     @media (min-width: @desktop-width) {
-      padding: 43px 58px 43px;
+      padding: 40px 58px 43px;
     }
   }
 }
@@ -149,7 +149,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 51px;
+    margin-bottom: 52px;
   }
 
   @media (min-width: @desktop-width) {
@@ -202,12 +202,13 @@
 
   @media (min-width: @tablet-width) {
     order: 3;
-    padding-top: 34px;
+    padding-top: 37px;
     padding-bottom: 30px;
     background-color: @white;
   }
 
   @media (min-width: @desktop-width) {
+    padding-top: 34px;
     width: 100%;
   }
 }
@@ -218,7 +219,7 @@
 
   @media (min-width: @tablet-width) {
     order: 2;
-    padding-top: 34px;
+    padding-top: 35px;
     padding-bottom: 30px;
   }
 
@@ -257,6 +258,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    padding-top: 38px;
     width: 100%;
   }
 }
@@ -271,11 +273,11 @@
     justify-content: space-between;
     align-items: center;
     order: 5;
-    padding: 38px 0 50px;
+    padding: 36px 0 50px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 35px 0 0;
+    padding: 36px 0 0;
     width: 100%;
   }
 }
@@ -347,6 +349,11 @@
     &:nth-child(5) {
       order: 1;
     }
+
+    &:nth-child(3),
+    &:nth-child(4) {
+      margin-left: 19px;
+    }
   }
 
   &:last-child {
@@ -404,7 +411,7 @@
 
 .contest-feedback__label {
   display: block;
-  margin-left: 22px;
+  margin-left: 24px;
   margin-bottom: 5px;
   line-height: 30px;
   color: @purple-red;
@@ -454,14 +461,18 @@
 }
 
 .contest-feedback__label-checkbox {
+  @media (min-width: @desktop-width) {
+    padding-left: 58px;
+  }
+
   &::before {
     content: "";
     position: absolute;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    width: 35px;
-    height: 35px;
+    width: 39px;
+    height: 39px;
     border: 2px solid @gray;
     border-radius: 2px;
     background-color: @white;
@@ -470,8 +481,8 @@
   &::after {
     content: none;
     position: absolute;
-    left: 8px;
-    top: 11px;
+    left: 9px;
+    top: 12px;
     transform: rotate(-45deg);
     width: 21px;
     height: 10px;
@@ -481,14 +492,20 @@
 }
 
 .contest-feedback__label-radio {
+  padding-left: 70px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 60px;
+  }
+
   &::before {
     content: "";
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 54%;
     transform: translateY(-50%);
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     border-width: 2px;
     border-style: solid;
     border-color: @gray;
@@ -500,7 +517,7 @@
     content: none;
     position: absolute;
     left: 13px;
-    top: 50%;
+    top: 55%;
     width: 14px;
     height: 14px;
     transform: translateY(-50%);
@@ -513,7 +530,7 @@
 .contest-feedback__label-radio {
   position: relative;
   display: block;
-  padding-left: 69px;
+  padding-left: 59px;
   padding-top: 5px;
   padding-bottom: 4px;
   font-size: 18px;
@@ -534,44 +551,17 @@
 }
 
 .contest-feedback__checkbox {
-  &:focus + .contest-feedback__label-checkbox {
-    outline: 1px dashed @purple-red;
-    outline-offset: 2px;
-  }
-
   &:checked + .contest-feedback__label-checkbox {
     &::after {
       content: "";
     }
   }
-
-  &:disabled + .contest-feedback__label-checkbox {
-    &::before,
-    &::after {
-      border-color: fade(@gray, 50%);
-    }
-  }
 }
 
 .contest-feedback__radio {
-  &:focus + .contest-feedback__label-radio {
-    outline: 1px dashed @purple-red;
-    outline-offset: 2px;
-  }
-
   &:checked + .contest-feedback__label-radio {
     &::after {
       content: "";
-    }
-  }
-
-  &:disabled + .contest-feedback__label-radio {
-    &::before {
-      border-color: fade(@gray, 50%);
-    }
-
-    &::after {
-      background-color: fade(@gray, 50%);
     }
   }
 }
