--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,18 +1,19 @@
 .download {
-  padding: 10px 20px 30px;
-  width: 280px;
+  padding: 3px 20px 30px;
+  width: 320px;
 
   background-image: url("../../img/iphone-hand-mobile@1x.png");
   background-position: 0 110px;
   background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
+    padding: 3px 10px 30px;
     padding-top: 93px;
-    padding-bottom: 110px;
+    padding-bottom: 113px;
     width: 640px;
 
     background-image: url("../../img/iphone-hand-tablet@1x.png");
-    background-position: -20px 74px;
+    background-position: -29px 73px;
   }
 
   @media (min-width: @desktop-width) {
@@ -30,7 +31,8 @@
 }
 
 .download__title {
-  padding: 0 20px;
+  padding: 0 30px;
+
   font-weight: 300;
   font-size: 24px;
   line-height: 120%;
@@ -38,6 +40,7 @@
   color: @white;
 
   @media (min-width: @tablet-width) {
+    display: block;
     margin-top: 0;
     margin-bottom: 31px;
     font-size: 40px;
@@ -51,7 +54,7 @@
 }
 
 .download__main-button {
-  margin-top: 348px;
+  margin-top: 346px;
   color: @white;
 
   @media (min-width: @tablet-width) {
@@ -61,6 +64,15 @@
   @media (min-width: @desktop-width) {
     margin-top: 0;
     font-size: 21px;
+  }
+
+  &:hover {
+    color: @purple-red;
+    background-color: @white;
+  }
+
+  &:active {
+    color: fade(@purple-red, 30%);
   }
 }
 
@@ -73,11 +85,11 @@
   list-style: none;
 
   margin-top: 38px;
-  margin-bottom: 31px;
+  margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 50px;
-    margin-bottom: 38px;
+    margin-top: 57px;
+    margin-bottom: 33px;
   }
 
   @media (min-width: @desktop-width) {
@@ -88,7 +100,7 @@
 
 .download__item {
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 .download__link {
@@ -102,8 +114,8 @@
 .download__text {
   margin-top: 0;
   margin-bottom: 0;
-  padding-bottom: 38px;
   text-align: center;
+  font-weight: 300;
 
   @media (min-width: @tablet-width) {
     font-size: 18px;
