--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -29,13 +29,13 @@
 .page-header__wrapper-logo {
   display: flex;
   justify-content: space-between;
-  padding: 21px 20px;
+  padding: 22px 20px;
 
   background-color: @blue-dark;
 
   @media (min-width: @tablet-width) {
-    padding-top: 27px;
-    padding-bottom: 42px;
+    padding-top: 42px;
+    padding-bottom: 45px;
   }
 
   @media (min-width: @desktop-width) {
@@ -55,6 +55,19 @@
     width: 145px;
     height: 40px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 147px;
+    height: 40px;
+  }
+
+  &[href]:hover {
+    color: @purple-red;
+  }
+
+  &[href]:active {
+    opacity: 0.3;
+  }
 }
 
 .page-header__image {
@@ -63,6 +76,7 @@
   height: 23px;
   fill: currentColor;
   pointer-events: none;
+
 
   &--mobile {
     display: block;
@@ -78,28 +92,27 @@
 }
 
 .page-header__title-wrapper {
-  padding: 15px 20px 40px;
+  padding: 15px 20px 26px;
   min-height: 172px;
 }
 
 @media (min-width: @tablet-width) {
   .page-header__title-wrapper {
-    margin-top: 34px;
-    margin-bottom: 34px;
+    padding-top: 54px;
+    padding-bottom: 0;
     min-height: 330px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header__title-wrapper {
-    padding-top: 29px;
-    padding-bottom: 67px;
+    padding: 45px 70px 67px;
     min-height: 284px;
   }
 }
 
 .page-header__title {
-  margin-top: 16px;
+  margin-top: 13px;
   margin-bottom: 16px;
 
   font-weight: 300;
