--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -1,6 +1,4 @@
 .photo-list {
-  padding-top: 15px;
-
   @media (min-width: @tablet-width) {
     padding-top: 39px;
   }
@@ -10,26 +8,239 @@
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 20px;
+  margin: 20px auto -20px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: -54px;
+  }
 }
 
 .photo-list__wrapper-grid {
   display: grid;
+  width: 280px;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 20px;
     row-gap: 20px;
+    width: 620px;
+    align-items: center;
   }
 
   @media (min-width: @desktop-width) {
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 10px;
+
     row-gap: 50px;
+    width: 940px;
   }
 }
 
 .photo-list__user {
-  &--of-the-day {
-    text-align: center;
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: 300px;
   }
+
+  &--of-the-day {
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    width: auto;
+    max-width: 320px;
+
+    @media (min-width: @tablet-width) {
+      width: auto;
+      max-width: 660px;
+    }
+
+    @media (min-width: @desktop-width) {
+      max-width: 1200px;
+    }
+  }
+}
+
+.photo-list__gallery {
+  margin: 0 0 20px 0;
+
+  @media (min-width: @desktop-width) {
+    margin: 0 0 54px 0;
+  }
+}
+
+.photo-list__link {
+  display: block;
+  overflow: hidden;
+  width: 280px;
+  height: 180px;
+  color: @white;
+  text-decoration: none;
+
+  @media (min-width: @tablet-width) {
+    width: 300px;
+    height: 300px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 300px;
+    height: 400px;
+  }
+
+  &--of-the-day {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 320px;
+    height: 137px;
+
+    @media (min-width: @tablet-width) {
+      width: 660px;
+      height: 509px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 1200px;
+      height: 506px;
+    }
+
+    &::before {
+      content: attr(data-panorama-text);
+      position: absolute;
+      z-index: 10;
+      top: 0;
+      right: 20px;
+      padding: 6px 20px;
+      font-size: 12px;
+      font-weight: 700;
+      line-height: 24px;
+      text-transform: uppercase;
+      background-color: @purple-red;
+
+      @media (min-width: @tablet-width) {
+        top: 56px;
+        right: 40px;
+      }
+
+      @media (min-width: @desktop-width) {
+        top: 54px;
+        right: 130px;
+      }
+    }
+  }
+}
+
+.photo-list__image {
+  display: block;
+}
+
+.photo-list__quote {
+  box-sizing: border-box;
+  padding: 18px 17px 21px;
+  background-color: @gray-light;
+
+  @media (min-width: @tablet-width) {
+    padding: 23px 32px 24px 27px;
+  }
+
+  &--of-the-day {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 280px;
+
+    @media (min-width: @tablet-width) {
+      flex-flow: row wrap;
+      justify-content: space-between;
+      padding: 24px 29px 13px 27px;
+      width: 620px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 24px 32px 12px 27px;
+      width: 940px;
+    }
+  }
+}
+
+.photo-list__author {
+  margin: 0;
+}
+
+.photo-list__title {
+  font-weight: 700;
+  font-style: normal;
+}
+
+.photo-list__date,
+.photo-list__likes {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.photo-list__date {
+  margin-left: 5px;
+  font-weight: 300;
+}
+
+.photo-list__text {
+  margin-top: 0;
+  margin-bottom: 9px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 12px;
+    min-height: 48px;
+  }
+
+  &--of-the-day {
+    @media (min-width: @tablet-width) {
+      order: 2;
+      min-height: auto;
+    }
+  }
+}
+
+.photo-list__likes-wrapper {
+  display: flex;
+  align-items: center;
+  margin-top: auto;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  &--of-the-day {
+    @media (min-width: @tablet-width) {
+      order: 1;
+    }
+  }
+}
+
+.photo-list__likes {
+  margin-left: 19px;
+  color: @purple-red;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 0;
+    margin-right: 17px;
+  }
+}
+
+.photo-list__button {
+  display: block;
+  padding: 0;
+  width: 13px;
+  height: 12px;
+  border: 0;
+  background-color: transparent;
+  background-image: url("../../img/icon-heart.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
 }
