--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -48,6 +48,7 @@
   margin-bottom: 13px;
   font-size: 18px;
   font-weight: 700;
+  font-style: normal;
   color: @black;
 
   @media (min-width: @tablet-width) {
