--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -37,8 +39,8 @@ img {
   padding-right: 20px;
 
   @media (min-width: @desktop-width) {
-    padding-left: 130px;
-    padding-right: 130px;
+    margin-left: 130px;
+    margin-right: 130px;
   }
 }
 
