В photo.html и form.html поправила отступы

--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -35,6 +35,7 @@
 
   @media (min-width: @desktop-width) {
     background-color: transparent;
+    max-width: 960px;
   }
 }
 
@@ -56,6 +57,7 @@
 
   @media (min-width: @desktop-width) {
     padding: 41px 60px 57px 80px;
+    width: 940px;
   }
 }
 
