--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,6 +21,7 @@
 @import "blocks/page-main.less";
 @import "blocks/personal-data.less";
 @import "blocks/photo-list.less";
+@import "blocks/picture.less";
 @import "blocks/price.less";
 @import "blocks/reviews.less";
 @import "blocks/reviews-nav.less";
