--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -1,4 +1,6 @@
 .photo-list {
+  padding-top: 15px;
+
   @media (min-width: @tablet-width) {
     padding-top: 39px;
   }
@@ -8,7 +10,6 @@
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 20px;
-  margin: 20px auto -20px;
 
   @media (min-width: @tablet-width) {
     margin-top: 50px;
@@ -20,21 +21,23 @@
 }
 
 .photo-list__wrapper-grid {
+  margin: 20px auto -20px;
   display: grid;
   width: 280px;
-  margin: 0 auto;
+  padding: 0 20px;
 
   @media (min-width: @tablet-width) {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 20px;
+    grid-template-columns: repeat(2, 300px);
     row-gap: 20px;
+    column-gap: 10px;
     width: 620px;
     align-items: center;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 10px;
+    column-gap: 20px;
+    padding: 0;
 
     row-gap: 50px;
     width: 940px;
@@ -42,10 +45,10 @@
 }
 
 .photo-list__user {
-  width: 280px;
+  margin: 0 0 20px 0;
 
   @media (min-width: @tablet-width) {
-    width: 300px;
+    margin: 0 0 54px 0;
   }
 
   &--of-the-day {
@@ -62,75 +65,6 @@
 
     @media (min-width: @desktop-width) {
       max-width: 1200px;
-    }
-  }
-}
-
-.photo-list__gallery {
-  margin: 0 0 20px 0;
-
-  @media (min-width: @desktop-width) {
-    margin: 0 0 54px 0;
-  }
-}
-
-.photo-list__link {
-  display: block;
-  overflow: hidden;
-  width: 280px;
-  height: 180px;
-  color: @white;
-  text-decoration: none;
-
-  @media (min-width: @tablet-width) {
-    width: 300px;
-    height: 300px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 300px;
-    height: 400px;
-  }
-
-  &--of-the-day {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 320px;
-    height: 137px;
-
-    @media (min-width: @tablet-width) {
-      width: 660px;
-      height: 509px;
-    }
-
-    @media (min-width: @desktop-width) {
-      width: 1200px;
-      height: 506px;
-    }
-
-    &::before {
-      content: attr(data-panorama-text);
-      position: absolute;
-      z-index: 10;
-      top: 0;
-      right: 20px;
-      padding: 6px 20px;
-      font-size: 12px;
-      font-weight: 700;
-      line-height: 24px;
-      text-transform: uppercase;
-      background-color: @purple-red;
-
-      @media (min-width: @tablet-width) {
-        top: 56px;
-        right: 40px;
-      }
-
-      @media (min-width: @desktop-width) {
-        top: 54px;
-        right: 130px;
-      }
     }
   }
 }
