--- a/source/less/global.less
+++ b/source/less/global.less
@@ -11,7 +11,6 @@
 .page__body {
   margin: 0;
   min-width: @mobile-width;
-  min-height: 100%;
 
   color: @blue-dark;
   font-family: @body-font;
@@ -33,14 +32,16 @@ img {
 }
 
 .container {
+  box-sizing: border-box;
   margin: 0 auto;
   min-width: @mobile-width;
+  max-width: @desktop-width;
   padding-left: 20px;
   padding-right: 20px;
 
   @media (min-width: @desktop-width) {
-    margin-left: 130px;
-    margin-right: 130px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
