Стилизовала ползунки в photo.html и вставила косые фоны в index.html

--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -129,9 +129,7 @@
 }
 
 .contest-feedback__list {
-  margin: 0;
-  padding-left: 0;
-  list-style: none;
+  .list ();
 
   &--row {
     @media (min-width: @desktop-width) {
