--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -79,11 +79,7 @@
 .download__list {
   display: flex;
   justify-content: center;
-  margin: 0;
-  padding-left: 0;
-
-  list-style: none;
-
+  .list ();
   margin-top: 38px;
   margin-bottom: 24px;
 
