--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -6,24 +6,21 @@
     content: "";
     position: absolute;
     z-index: 100;
-    top: 0;
     left: 0;
     right: 0;
-    height: 33px;
+    height: 100px;
     background-image: url("../../img/bg-triangle-white-footer.svg");
-    background-size: 100% 33px;
-    background-position: 50% 0;
+    background-size: 101% auto;
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
-      height: 67px;
-      background-size: 100% 68px;
+      height: 100px;
+      background-size: 101% auto;
     }
 
     @media (min-width: @desktop-width) {
-      height: 140px;
-      background-size: 100% 140px;
-      top: -2%;
+      height: 150px;
+      background-size: 101% auto;
     }
   }
 }
