--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,3 +27,4 @@
 @import "blocks/reviews-nav.less";
 @import "blocks/site-list.less";
 @import "blocks/toggles.less";
+@import "global/helpers.less";
