--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,12 +1,20 @@
 .advantages {
+  padding-top: 81px;
   background-color: @gray-light;
+  background-image: url("../../img/bg-triangle-white.svg");
+  background-size: 101% auto;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
-    background-size: 100% 50px;
+    background-size: 101% auto;
+    background-position: 50% 0;
   }
 
   @media (min-width: @desktop-width) {
-    background-size: 100% 92px;
+    background-size: 101% auto;
+    background-position: 50% 0;
+    background-color: @gray-light;
   }
 }
 
@@ -46,6 +54,7 @@
 
     background-image: url("../../img/iphone-screen-3-tablet@1x.png");
     background-position: 20px 3px;
+    background-color: transparent;
   }
 
   @media (min-width: @desktop-width) {
