--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -36,21 +36,22 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0;
-  padding-left: 0;
   padding-bottom: 40px;
-  list-style: none;
+  .list ();
+
 
   @media (min-width: @tablet-width) {
     justify-content: space-around;
     margin-left: -10px;
     margin-right: -10px;
     padding-top: 42px;
+    padding-bottom: 10px;
   }
 
   @media (min-width: @desktop-width) {
     margin: 0;
     padding-top: 56px;
+    padding-bottom: 10px;
   }
 }
 
