--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -109,13 +109,10 @@
 }
 
 .main-nav__list {
-  margin: 0;
-  padding-left: 0;
-
+  .list ();
   line-height: 32px;
 
   border-top: 1px solid @black;
-  list-style: none;
 
   @media (min-width: @desktop-width) {
     display: flex;
