--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -65,12 +65,10 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 0;
-  padding-left: 0;
   padding-top: 34px;
   padding-bottom: 36px;
+  .list ();
 
-  list-style: none;
 
   @media (min-width: @tablet-width) {
     padding-top: 0;
