--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -2,17 +2,25 @@
   padding-top: 97px;
   padding-bottom: 32px;
   background-color: @gray-light;
+  background-image: url("../../img/bg-triangle-white.svg");
+  background-size: 101% auto;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
     padding-top: 86px;
     padding-bottom: 69px;
-    background-size: 100% 50px;
+
+    background-size: 101% auto;
+    background-position: 50% 0;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 150px;
     padding-bottom: 95px;
-    background-size: 100% 80px;
+
+    background-size: 101% auto;
+    background-position: 50% 0;
   }
 }
 
