--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -4,7 +4,13 @@
 
   background-image: url("../../img/iphone-hand-mobile@1x.png");
   background-position: 0 110px;
+  background-size: 320px 286px;
   background-repeat: no-repeat;
+
+  @media (min-resolution: 1.5dppx) {
+    background-image: url("../../img/iphone-hand-mobile@2x.png");
+    background-size: 270px 286px;
+  }
 
   @media (min-width: @tablet-width) {
     padding: 3px 10px 30px;
@@ -13,7 +19,12 @@
     width: 640px;
 
     background-image: url("../../img/iphone-hand-tablet@1x.png");
-    background-position: -29px 73px;
+    background-position: -3px 73px;
+    background-size: 660px 545px;
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../../img/iphone-hand-tablet@2x.png");
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -21,6 +32,11 @@
     width: 940px;
     background-image: url("../../img/iphone-hand-desktop@1x.png");
     background-position: 26px 99px;
+    background-size: 1050px 645px;
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../../img/iphone-hand-desktop@2x.png");
+    }
   }
 }
 
