--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,14 +7,29 @@
   background-position: 50% 259px;
   background-repeat: no-repeat;
 
+  @media (min-resolution: 1.5dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-position: 50% 170px;
+  }
+
   @media (min-width: @tablet-width) {
     background-image: url("../../img/bg-back-tablet@1x.jpg");
     background-position: 50% 256px;
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-position: 50% 170px;
+    }
   }
 
   @media (min-width: @desktop-width) {
     background-image: url("../../img/bg-back-desktop@1x.jpg");
     background-position: 50% 0;
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../../img/bg-back-desktop@2x.jpg");
+      background-position: 50% 10px;
+    }
   }
 }
 
